ensure working directory for rsylog

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -7,7 +7,10 @@
     - rsyslog
     - rsyslog-gnutls
   apt: name={{ item }} state=installed
-    
+
+- name: Create work directory for rsyslog
+  file: path=/etc/rsyslog.d/work state=directory
+  
 - name: Create main rsyslog configuration
   template:
     src="rsyslog.conf.j2"
